--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+    />
 
     <title>Store App</title>
   </head>
